[gd_scene load_steps=25 format=3 uid="uid://d20ohbao5xm0v"]

[ext_resource type="TileSet" uid="uid://cy0a6hqn3padk" path="res://Assets/DrumScrewMinigame/Floortile_set.tres" id="1_0rddx"]
[ext_resource type="Script" path="res://Objects/Minigames/DrumSeeping/MG-Drum-Seeping.gd" id="1_eoxep"]
[ext_resource type="Texture2D" uid="uid://c1qoqhj11uut4" path="res://Assets/DrumScrewMinigame/ScrewDrumMinigame.png" id="2_jfh1y"]
[ext_resource type="Texture2D" uid="uid://cigf2cuc3hnru" path="res://Assets/DrumSeepingMinigame/Pressing.png" id="3_jm5rb"]
[ext_resource type="PackedScene" uid="uid://bfwbdvweyvljo" path="res://Objects/3dBackground_ScrewGame_SnareVer.tscn" id="4_lvqxg"]
[ext_resource type="PackedScene" uid="uid://ci7gmcs62ykic" path="res://Objects/3dBackground_ScrewGame.tscn" id="5_25ase"]
[ext_resource type="Texture2D" uid="uid://bygos2e234mru" path="res://Assets/DrumSeepingMinigame/MG2_SlidingScale.png" id="5_i0s25"]
[ext_resource type="Texture2D" uid="uid://dqo0qnv6j7ban" path="res://Assets/DrumSeepingMinigame/MG2_SlidingScale2.png" id="6_yslej"]
[ext_resource type="Texture2D" uid="uid://bq62xyb0oc8ew" path="res://Assets/DrumSeepingMinigame/MG2_SlidingScale3.png" id="7_emks1"]
[ext_resource type="Texture2D" uid="uid://btu3c8etohsut" path="res://Assets/DrumScrewMinigame/Space_prompt.png" id="7_f7dq6"]
[ext_resource type="Texture2D" uid="uid://vqhjammbv5tl" path="res://Assets/DrumSeepingMinigame/MG2_SlidingScaleArrow.png" id="8_ik8k5"]
[ext_resource type="Script" path="res://Objects/Minigames/DrumSeeping/SlidingScaleArrow.gd" id="8_ted50"]
[ext_resource type="Texture2D" uid="uid://bfyeepnf5u8xa" path="res://Assets/DrumSeepingMinigame/MG2_Instrunctions.png" id="13_d2hbe"]
[ext_resource type="AudioStream" uid="uid://cetf3lm3gf05p" path="res://Assets/Audio/BassSeep.mp3" id="14_siaqq"]

[sub_resource type="Animation" id="Animation_7ft6i"]
resource_name = "Pulsate"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pressing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.73698, 1.79167), Vector2(1.9, 1.961), Vector2(1.73698, 1.79167)]
}

[sub_resource type="Animation" id="Animation_ijyqp"]
resource_name = "Seep"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pressing:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.329877),
"update": 0,
"values": [Vector2(1.73698, 1.79167), Vector2(1.3, 1.341)]
}

[sub_resource type="Animation" id="Animation_jctpk"]
resource_name = "Slide"
length = 4.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_utotr"]
_data = {
"Pulsate": SubResource("Animation_7ft6i"),
"Seep": SubResource("Animation_ijyqp"),
"Slide": SubResource("Animation_jctpk")
}

[sub_resource type="Animation" id="Animation_vrj73"]
resource_name = "Slide"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlidingScaleArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -457), Vector2(0, 0), Vector2(0, 457), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0rg4d"]
_data = {
"Slide": SubResource("Animation_vrj73")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8wxa"]
size = Vector2(209, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mte36"]
size = Vector2(207, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ft2g5"]
size = Vector2(218, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_d7ldw"]
radius = 24.8887

[node name="Mg-drum-seeping" type="Node2D"]
script = ExtResource("1_eoxep")

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("1_0rddx")
rendering_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(196611, 0, 0, 196619, 0, 0, 196627, 0, 0, 196635, 0, 0, 196643, 0, 0, 196651, 0, 0, 196659, 3, 0, 196667, 3, 0, 196675, 3, 0, 196683, 3, 0, 196691, 3, 0, 196699, 3, 0, 196707, 3, 0, 196715, 3, 0, 196723, 3, 0, 196731, 3, 0, 720899, 0, 0, 720907, 0, 0, 720915, 0, 0, 720923, 0, 0, 720931, 0, 0, 720939, 0, 0, 720947, 3, 0, 720955, 3, 0, 720963, 3, 0, 720971, 3, 0, 720979, 3, 0, 720987, 3, 0, 720995, 3, 0, 721003, 3, 0, 721011, 3, 0, 721019, 3, 0, 1245187, 0, 0, 1245195, 0, 0, 1245203, 0, 0, 1245211, 0, 0, 1245219, 0, 0, 1245227, 0, 0, 1245235, 3, 0, 1245243, 3, 0, 1245251, 3, 0, 1245259, 3, 0, 1245267, 3, 0, 1245275, 3, 0, 1245283, 3, 0, 1245291, 3, 0, 1245299, 3, 0, 1245307, 3, 0, 1769475, 0, 0, 2293763, 0, 0, 2818051, 0, 0, 1769483, 0, 0, 2293771, 0, 0, 2818059, 0, 0, 1769491, 0, 0, 2293779, 0, 0, 2818067, 0, 0, 1769499, 0, 0, 2293787, 0, 0, 2818075, 0, 0, 1769507, 0, 0, 2293795, 0, 0, 2818083, 0, 0, 1769515, 0, 0, 2293803, 0, 0, 2818091, 0, 0, 1769523, 3, 0, 2293811, 3, 0, 2818099, 3, 0, 1769531, 3, 0, 2293819, 3, 0, 2818107, 3, 0, 1769539, 3, 0, 2293827, 3, 0, 2818115, 3, 0, 1769547, 3, 0, 2293835, 3, 0, 2818123, 3, 0, 1769555, 3, 0, 2293843, 3, 0, 2818131, 3, 0, 1769563, 3, 0, 2293851, 3, 0, 2818139, 3, 0, 1769571, 3, 0, 2293859, 3, 0, 2818147, 3, 0, 1769579, 3, 0, 2293867, 3, 0, 2818155, 3, 0, 1769587, 3, 0, 2293875, 3, 0, 2818163, 3, 0, 1769595, 3, 0, 2293883, 3, 0, 2818171, 3, 0, 3342339, 0, 0, 3866627, 0, 0, 4390915, 0, 0, 3342347, 0, 0, 3866635, 0, 0, 4390923, 0, 0, 3342355, 0, 0, 3866643, 0, 0, 4390931, 0, 0, 3342363, 0, 0, 3866651, 0, 0, 4390939, 0, 0, 3342371, 0, 0, 3866659, 0, 0, 4390947, 0, 0, 3342379, 0, 0, 3866667, 0, 0, 4390955, 0, 0, 3342387, 3, 0, 3866675, 3, 0, 4390963, 3, 0, 3342395, 3, 0, 3866683, 3, 0, 4390971, 3, 0, 3342403, 3, 0, 3866691, 3, 0, 4390979, 3, 0, 3342411, 3, 0, 3866699, 3, 0, 4390987, 3, 0, 3342419, 3, 0, 3866707, 3, 0, 4390995, 3, 0, 3342427, 3, 0, 3866715, 3, 0, 4391003, 3, 0, 3342435, 3, 0, 3866723, 3, 0, 4391011, 3, 0, 3342443, 3, 0, 3866731, 3, 0, 4391019, 3, 0, 3342451, 3, 0, 3866739, 3, 0, 4391027, 3, 0, 3342459, 3, 0, 3866747, 3, 0, 4391035, 3, 0, 196658, 0, 0, 196666, 0, 0, 196674, 0, 0, 196682, 0, 0, 196690, 0, 0, 196698, 0, 0, 196706, 0, 0, 196714, 0, 0, 196722, 0, 0, 196730, 0, 0, 720946, 0, 0, 720954, 0, 0, 720962, 0, 0, 720970, 0, 0, 720978, 0, 0, 720986, 0, 0, 720994, 0, 0, 721002, 0, 0, 721010, 0, 0, 721018, 0, 0, 1245234, 0, 0, 1245242, 0, 0, 1245250, 0, 0, 1245258, 0, 0, 1245266, 0, 0, 1245274, 0, 0, 1245282, 0, 0, 1245290, 0, 0, 1245298, 0, 0, 1245306, 0, 0, 1769522, 0, 0, 1769530, 0, 0, 1769538, 0, 0, 1769546, 0, 0, 1769554, 0, 0, 1769562, 0, 0, 1769570, 0, 0, 1769578, 0, 0, 1769586, 0, 0, 1769594, 0, 0, 2293810, 0, 0, 2293818, 0, 0, 2293826, 0, 0, 2293834, 0, 0, 2293842, 0, 0, 2293850, 0, 0, 2293858, 0, 0, 2293866, 0, 0, 2293874, 0, 0, 2293882, 0, 0, 2818098, 0, 0, 2818106, 0, 0, 2818114, 0, 0, 2818122, 0, 0, 2818130, 0, 0, 2818138, 0, 0, 2818146, 0, 0, 2818154, 0, 0, 2818162, 0, 0, 2818170, 0, 0, 3342386, 0, 0, 3342394, 0, 0, 3342402, 0, 0, 3342410, 0, 0, 3342418, 0, 0, 3342426, 0, 0, 3342434, 0, 0, 3342442, 0, 0, 3342450, 0, 0, 3342458, 0, 0, 3866674, 0, 0, 3866682, 0, 0, 3866690, 0, 0, 3866698, 0, 0, 3866706, 0, 0, 3866714, 0, 0, 3866722, 0, 0, 3866730, 0, 0, 3866738, 0, 0, 3866746, 0, 0, 4390962, 0, 0, 4390970, 0, 0, 4390978, 0, 0, 4390986, 0, 0, 4390994, 0, 0, 4391002, 0, 0, 4391010, 0, 0, 4391018, 0, 0, 4391026, 0, 0, 4391034, 0, 0)

[node name="DrumSprite" type="Sprite2D" parent="."]
position = Vector2(1014, 560)
scale = Vector2(0.841204, 0.864352)
texture = ExtResource("2_jfh1y")

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="SnareDrumBG" parent="SubViewportContainer2" instance=ExtResource("4_lvqxg")]
own_world_3d = true
handle_input_locally = false
render_target_update_mode = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="BassDrumBG" parent="SubViewportContainer" instance=ExtResource("5_25ase")]
handle_input_locally = false
render_target_update_mode = 4

[node name="Pressing" type="Sprite2D" parent="."]
visible = false
position = Vector2(965, 487)
scale = Vector2(1.75964, 1.81521)
texture = ExtResource("3_jm5rb")

[node name="Sprite2D" type="Sprite2D" parent="Pressing"]
position = Vector2(0, 190)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_f7dq6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_utotr")
}
speed_scale = 1.421

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0rg4d")
}

[node name="SlidingScale" type="Area2D" parent="."]

[node name="Mg2SlidingScale" type="Sprite2D" parent="SlidingScale"]
position = Vector2(1637, 564)
scale = Vector2(1, 1.31901)
texture = ExtResource("5_i0s25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlidingScale"]
position = Vector2(1640.5, 563.5)
shape = SubResource("RectangleShape2D_e8wxa")

[node name="SlidingScale2" type="Area2D" parent="."]
visible = false

[node name="Mg2SlidingScale2" type="Sprite2D" parent="SlidingScale2"]
position = Vector2(1641, 563)
scale = Vector2(1.005, 1.319)
texture = ExtResource("6_yslej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlidingScale2"]
position = Vector2(1643.5, 563)
shape = SubResource("RectangleShape2D_mte36")

[node name="SlidingScale3" type="Area2D" parent="."]
visible = false

[node name="Mg2SlidingScale3" type="Sprite2D" parent="SlidingScale3"]
position = Vector2(1639, 561)
scale = Vector2(1, 1.319)
texture = ExtResource("7_emks1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlidingScale3"]
position = Vector2(1642, 561)
shape = SubResource("RectangleShape2D_ft2g5")

[node name="SlidingScaleArrow" type="Area2D" parent="."]
visible = false
script = ExtResource("8_ted50")

[node name="Mg2SlidingScaleArrow" type="Sprite2D" parent="SlidingScaleArrow"]
position = Vector2(1781, 564)
scale = Vector2(0.842448, 0.470052)
texture = ExtResource("8_ik8k5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlidingScaleArrow"]
position = Vector2(1726, 564)
scale = Vector2(0.842448, 0.470052)
shape = SubResource("CircleShape2D_d7ldw")

[node name="Result" type="Sprite2D" parent="."]
position = Vector2(280, 215)
scale = Vector2(0.450521, 0.494792)

[node name="Result2" type="Sprite2D" parent="."]
position = Vector2(280, 588)
scale = Vector2(0.450521, 0.494792)

[node name="Result3" type="Sprite2D" parent="."]
position = Vector2(280, 949)
scale = Vector2(0.450521, 0.494792)

[node name="Mg2Instrunctions" type="Sprite2D" parent="."]
position = Vector2(1349, 817)
scale = Vector2(0.654334, 0.698748)
texture = ExtResource("13_d2hbe")

[node name="SeepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_siaqq")

[connection signal="area_entered" from="SlidingScale" to="SlidingScaleArrow" method="_on_sliding_scale_area_entered"]
[connection signal="area_exited" from="SlidingScale" to="SlidingScaleArrow" method="_on_sliding_scale_area_exited"]
[connection signal="area_entered" from="SlidingScale2" to="SlidingScaleArrow" method="_on_sliding_scale_2_area_entered"]
[connection signal="area_exited" from="SlidingScale2" to="SlidingScaleArrow" method="_on_sliding_scale_2_area_exited"]
[connection signal="area_entered" from="SlidingScale3" to="SlidingScaleArrow" method="_on_sliding_scale_3_area_entered"]
[connection signal="area_exited" from="SlidingScale3" to="SlidingScaleArrow" method="_on_sliding_scale_3_area_exited"]
